--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment8001</module>
-      <module>cloud-consumer-order80</module>
       <module>cloud-api-commons</module>
+    <module>cloud-consumer-order8000</module>
+    <module>cloud-eureka-server7001</module>
+    <module>cloud-eureka-server7000</module>
+    <module>cloud-eureka-server7002</module>
   </modules>
   <packaging>pom</packaging>
 
