--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <module>cloud-eureka-server7000</module>
     <module>cloud-eureka-server7002</module>
     <module>cloud-provider-payment8002</module>
+      <module>cloud-provider-payment8004</module>
+      <module>cloud-consumerzk-order8003</module>
   </modules>
   <packaging>pom</packaging>
 
