--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>cloud-provider-payment8002</module>
       <module>cloud-provider-payment8004</module>
       <module>cloud-consumerzk-order8003</module>
+      <module>cloud-consumer-feign-order8005</module>
   </modules>
   <packaging>pom</packaging>
 
